--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/loader.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-
+    <link href="css/theme.css" rel="stylesheet">
     <link href="css/starter.css" rel="stylesheet">
 
 </head>
@@ -14,7 +14,7 @@
     <div class="container">
 
         <div class="starter-template">
-            <h1>Liquid Art</h1>
+            <h1>Daily art of the day</h1>
             <div id="works-of-art">
 
             </div>
