--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
 
         <div class="starter-template">
-            <h1>Daily art of the day</h1>
+            <h1>Work art of the day</h1>
             <div id="works-of-art">
 
             </div>
