--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Liquid Art</title>
+    <title>Work art of the day - by Liquid Studio</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/loader.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link href="css/theme.css" rel="stylesheet">
     <link href="css/starter.css" rel="stylesheet">
+
+    <meta property="og:site_name" content="Work art of the day - Liquid">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://www.salvador-dali.org/media/upload/cataleg_pintura/MITJA/0607.jpg" />
 
 </head>
 <body>
