--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Work art of the day - by Liquid Studio</title>
+    <title>Arkwork of the day - by Liquid Studio</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/loader.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link href="css/theme.css" rel="stylesheet">
     <link href="css/starter.css" rel="stylesheet">
 
-    <meta property="og:site_name" content="Work art of the day - Liquid">
+    <meta property="og:site_name" content="Artwork of the day - Liquid">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.salvador-dali.org/media/upload/cataleg_pintura/MITJA/0607.jpg" />
 
@@ -18,13 +18,19 @@
     <div class="container">
 
         <div class="starter-template">
-            <h1>Work art of the day</h1>
+            <h1>Artwork of the day</h1>
             <div id="works-of-art">
 
             </div>
         </div>
 
     </div><!-- /.container -->
+
+    <footer class="footer">
+        <div class="container">
+            <span class="text-muted">All the artworks shown here have been chosen for some reason by the <a href="https://liquid.cat">Liquid Studio</a> team.</span>
+        </div>
+    </footer>
 
 </body>
 </html>
