--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head>
     <title>Arkwork of the day - by Liquid Studio</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script type="text/javascript" src="js/Controller.js"></script>
     <script type="text/javascript" src="js/loader.js"></script>
+
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+
     <link href="css/theme.css" rel="stylesheet">
     <link href="css/starter.css" rel="stylesheet">
 
@@ -15,10 +20,38 @@
 </head>
 <body>
 
+    <nav class="navbar navbar-expand-md navbar-dark bg-primary mb-2">
+        <a class="navbar-brand" href="#">Arkwort of the day</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarColor02">
+
+            <button class="navbar-toggler ml-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Who
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-right dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink" id="senders">
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://liquid.cat">Liquid Studio</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <div class="container">
 
+
+
         <div class="starter-template">
-            <h1>Artwork of the day</h1>
             <div id="works-of-art">
 
             </div>
@@ -26,11 +59,7 @@
 
     </div><!-- /.container -->
 
-    <footer class="footer">
-        <div class="container">
-            <span class="text-muted">All the artworks shown here have been chosen for some reason by the <a href="https://liquid.cat">Liquid Studio</a> team.</span>
-        </div>
-    </footer>
+
 
 </body>
 </html>
