--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="es">
 <head>
+    <meta charset="utf-8">
     <title>Arkwork of the day - by Liquid Studio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/Controller.js"></script>
     <script type="text/javascript" src="js/loader.js"></script>
@@ -21,16 +24,13 @@
 <body>
 
     <nav class="navbar navbar-expand-md navbar-dark bg-primary mb-2">
-        <a class="navbar-brand" href="#">Arkwort of the day</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarColor02">
-
-            <button class="navbar-toggler ml-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Arkwort of the day</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+            <div class="collapse navbar-collapse" id="navbar">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -47,9 +47,7 @@
         </div>
     </nav>
 
-    <div class="container">
-
-
+    <div class="container my-5">
 
         <div class="starter-template">
             <div id="works-of-art">
@@ -58,8 +56,6 @@
         </div>
 
     </div><!-- /.container -->
-
-
 
 </body>
 </html>
